<resources>
    <string name="app_name">WhiteboardApp</string>
    <string name="string_new">New</string>
    <string name="string_brush">Brush</string>
    <string name="string_erase">Erase</string>
    <string name="string_save">Save</string>
    <string name="string_draw">Draw</string>
    <string name="string_paint">Paint</string>
    <string name="red">Red:</string>
    <string name="blue">Blue:</string>
    <string name="green">Green:</string>
    <string name="alpha">Alpha:</string>
    <string name="choose_custom_color">Choose Custom Color</string>
    <string name="final_chosen_color">Final chosen color</string>
    <string name="choose_custom_brush_size">Choose custom brush size</string>
    <string name="change_brush_size">Change brush size</string>
    <string name="create_a_new_image">Create a new image.</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="add_background_image">Add background image</string>
    <string name="select_a_shape">Select a shape</string>
    <string name="circle">circle</string>
    <string name="triangle">triangle</string>
    <string name="rectangle">rectangle</string>
    <string name="choose_shape">Choose shape</string>
    <string name="fill">Fill: </string>
    <string name="fill_shape">Fill the shape</string>
    <string name="finish_creating_shape">Finish creating shape</string>
</resources>
