<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/choose_shape"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray"
        android:gravity="center">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/circle"
            android:src="@drawable/shape_circle"
            android:background="@android:color/transparent"
            android:layout_margin="10dp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rectangle"
            android:src="@drawable/shape_rectangle"
            android:background="@android:color/transparent"
            android:layout_margin="10dp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/triangle"
            android:src="@drawable/shape_triangle"
            android:background="@android:color/transparent"
            android:layout_margin="10dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:id="@+id/fill_switch" />

    </LinearLayout>

</LinearLayout>